--- a/NeuroHero/predict_outcome.ipynb
+++ b/NeuroHero/predict_outcome.ipynb
@@ -560,7 +560,128 @@
      "output_type": "stream",
      "text": [
       "It's likely that the patient will have a good neurological outcome\n",
-      "Probability of Poor Outcome: 66.34605526924133%\n"
+      "Probability of Poor Outcome: 66.34605526924133%\n",
+      "Received file names: ['0313_006_009_EEG.mat', '0313_006_009_EEG.hea', '0313.txt']\n",
+      "1/1 [==============================] - 0s 62ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "192.168.1.26 - - [29/Oct/2023 09:13:27] \"POST /upload HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's likely that the patient will have a good neurological outcome\n",
+      "Probability of Poor Outcome: 33.119285106658936%\n",
+      "Received file names: ['0313_005_008_EEG.mat', '0313_005_008_EEG.hea', '0313.txt']\n",
+      "1/1 [==============================] - 0s 78ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "192.168.1.26 - - [29/Oct/2023 09:15:09] \"POST /upload HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's likely that the patient will have a good neurological outcome\n",
+      "Probability of Poor Outcome: 45.51488161087036%\n",
+      "Received file names: ['0313_004_007_EEG.mat', '0313_004_007_EEG.hea', '0313.txt']\n",
+      "WARNING:tensorflow:5 out of the last 5 calls to <function Model.make_predict_function.<locals>.predict_function at 0x00000283BAB6ACA0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "1/1 [==============================] - 0s 78ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "192.168.1.26 - - [29/Oct/2023 09:16:27] \"POST /upload HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's likely that the patient will have a good neurological outcome\n",
+      "Probability of Poor Outcome: 60.36648750305176%\n",
+      "Received file names: ['0313_003_006_EEG.mat', '0313_003_006_EEG.hea', '0313.txt']\n",
+      "WARNING:tensorflow:6 out of the last 6 calls to <function Model.make_predict_function.<locals>.predict_function at 0x00000283BAD54A40> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "1/1 [==============================] - 0s 78ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "192.168.1.26 - - [29/Oct/2023 09:17:37] \"POST /upload HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's likely that the patient will have a good neurological outcome\n",
+      "Probability of Poor Outcome: 34.70042049884796%\n",
+      "Received file names: ['0313_001_004_EEG.mat', '0313_001_004_EEG.hea', '0313.txt']\n",
+      "1/1 [==============================] - 0s 63ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "192.168.1.26 - - [29/Oct/2023 09:18:34] \"POST /upload HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's likely that the patient will have a good neurological outcome\n",
+      "Probability of Poor Outcome: 66.34605526924133%\n",
+      "Received file names: ['0313_002_005_EEG.mat', '0313_002_005_EEG.hea', '0313.txt']\n",
+      "1/1 [==============================] - 0s 62ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "192.168.1.26 - - [29/Oct/2023 09:20:28] \"POST /upload HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's likely that the patient will have a poor neurological outcome\n",
+      "Probability of Poor Outcome: 99.99988675117493%\n",
+      "Received file names: ['0313_003_006_EEG.mat', '0313_003_006_EEG.hea', '0313.txt']\n",
+      "1/1 [==============================] - 0s 78ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "192.168.1.26 - - [29/Oct/2023 09:28:16] \"POST /upload HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's likely that the patient will have a good neurological outcome\n",
+      "Probability of Poor Outcome: 34.70042049884796%\n"
      ]
     }
    ],
