included pre processing and dl code

--- a/NeuroHero/predict_outcome.ipynb
+++ b/NeuroHero/predict_outcome.ipynb
@@ -36,30 +36,6 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[   0    0    0 ... -284 -281 -284]\n",
-      " [   0    0    0 ... -301 -285 -267]\n",
-      " [   0    0    0 ...   -5    0   -6]\n",
-      " ...\n",
-      " [   0    0    0 ...   26   35   46]\n",
-      " [   0    0    0 ...  -37  -26   -6]\n",
-      " [   0    0    0 ...  -96  -76  -55]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "eeg_data = load_mat(r\"C:\\Users\\sendm\\physionet.org\\files\\i-care\\2.0\\training\\0313\\0313_001_004_EEG.mat\")\n",
-    "print(eeg_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [],
    "source": [
     "def load_patient_data(file_path):\n",
@@ -92,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,8 +464,8 @@
     "order = 3\n",
     "low_freq = 1\n",
     "upper_freq = 49\n",
-    "# path_eeg = r\"C:\\Users\\sendm\\physionet.org\\files\\i-care\\2.0\\training\\0313\\0313_001_004_EEG.mat\"\n",
-    "# path_header = r\"C:\\Users\\sendm\\physionet.org\\files\\i-care\\2.0\\training\\0313\\0313_001_004_EEG.hea\"\n",
+    "# path_eeg = r\"C:\\Users\\sendm\\physionet.org\\files\\i-care\\2.0\\training\\0313\\0313_003_006_EEG.mat\"\n",
+    "# path_header = r\"C:\\Users\\sendm\\physionet.org\\files\\i-care\\2.0\\training\\0313\\0313_003_006_EEG.hea\"\n",
     "# path_patient_info = r\"C:\\Users\\sendm\\physionet.org\\files\\i-care\\2.0\\training\\0313\\0313.txt\"\n",
     "base_path = r\"C:\\Users\\sendm\\physionet.org\\files\\i-care\\2.0\\training\\0313\\\\\"\n",
     "\n",
@@ -501,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -527,102 +503,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Received file names: ['0313_001_004_EEG.mat', '0313_001_004_EEG.hea', '0313.txt']\n",
-      "1/1 [==============================] - 0s 192ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "192.168.1.26 - - [29/Oct/2023 08:44:04] \"POST /upload HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "It's likely that the patient will have a good neurological outcome\n",
-      "Probability of Poor Outcome: 66.34605526924133%\n",
-      "Received file names: ['0313_001_004_EEG.mat', '0313_001_004_EEG.hea', '0313.txt']\n",
-      "1/1 [==============================] - 0s 63ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "192.168.1.26 - - [29/Oct/2023 08:51:55] \"POST /upload HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "It's likely that the patient will have a good neurological outcome\n",
-      "Probability of Poor Outcome: 66.34605526924133%\n",
-      "Received file names: ['0313_006_009_EEG.mat', '0313_006_009_EEG.hea', '0313.txt']\n",
-      "1/1 [==============================] - 0s 62ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "192.168.1.26 - - [29/Oct/2023 09:13:27] \"POST /upload HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "It's likely that the patient will have a good neurological outcome\n",
-      "Probability of Poor Outcome: 33.119285106658936%\n",
-      "Received file names: ['0313_005_008_EEG.mat', '0313_005_008_EEG.hea', '0313.txt']\n",
-      "1/1 [==============================] - 0s 78ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "192.168.1.26 - - [29/Oct/2023 09:15:09] \"POST /upload HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "It's likely that the patient will have a good neurological outcome\n",
-      "Probability of Poor Outcome: 45.51488161087036%\n",
-      "Received file names: ['0313_004_007_EEG.mat', '0313_004_007_EEG.hea', '0313.txt']\n",
-      "WARNING:tensorflow:5 out of the last 5 calls to <function Model.make_predict_function.<locals>.predict_function at 0x00000283BAB6ACA0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
-      "1/1 [==============================] - 0s 78ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "192.168.1.26 - - [29/Oct/2023 09:16:27] \"POST /upload HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "It's likely that the patient will have a good neurological outcome\n",
-      "Probability of Poor Outcome: 60.36648750305176%\n",
       "Received file names: ['0313_003_006_EEG.mat', '0313_003_006_EEG.hea', '0313.txt']\n",
-      "WARNING:tensorflow:6 out of the last 6 calls to <function Model.make_predict_function.<locals>.predict_function at 0x00000283BAD54A40> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
-      "1/1 [==============================] - 0s 78ms/step\n"
+      "1/1 [==============================] - 0s 79ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "192.168.1.26 - - [29/Oct/2023 09:17:37] \"POST /upload HTTP/1.1\" 200 -\n"
+      "192.168.1.26 - - [29/Oct/2023 15:48:48] \"POST /upload HTTP/1.1\" 200 -\n"
      ]
     },
     {
@@ -631,15 +520,15 @@
      "text": [
       "It's likely that the patient will have a good neurological outcome\n",
       "Probability of Poor Outcome: 34.70042049884796%\n",
-      "Received file names: ['0313_001_004_EEG.mat', '0313_001_004_EEG.hea', '0313.txt']\n",
-      "1/1 [==============================] - 0s 63ms/step\n"
+      "Received file names: ['0313_003_006_EEG.mat', '0313_003_006_EEG.hea', '0313.txt']\n",
+      "1/1 [==============================] - 0s 69ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "192.168.1.26 - - [29/Oct/2023 09:18:34] \"POST /upload HTTP/1.1\" 200 -\n"
+      "192.168.1.26 - - [29/Oct/2023 15:51:38] \"POST /upload HTTP/1.1\" 200 -\n"
      ]
     },
     {
@@ -647,33 +536,34 @@
      "output_type": "stream",
      "text": [
       "It's likely that the patient will have a good neurological outcome\n",
-      "Probability of Poor Outcome: 66.34605526924133%\n",
-      "Received file names: ['0313_002_005_EEG.mat', '0313_002_005_EEG.hea', '0313.txt']\n",
-      "1/1 [==============================] - 0s 62ms/step\n"
+      "Probability of Poor Outcome: 34.70042049884796%\n",
+      "Received file names: ['0313_003_006_EEG.mat', '0313_003_006_EEG.hea', '0313.txt']\n",
+      "1/1 [==============================] - 0s 77ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "192.168.1.26 - - [29/Oct/2023 09:20:28] \"POST /upload HTTP/1.1\" 200 -\n"
+      "192.168.1.26 - - [29/Oct/2023 15:55:06] \"POST /upload HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "It's likely that the patient will have a poor neurological outcome\n",
-      "Probability of Poor Outcome: 99.99988675117493%\n",
+      "It's likely that the patient will have a good neurological outcome\n",
+      "Probability of Poor Outcome: 34.70042049884796%\n",
       "Received file names: ['0313_003_006_EEG.mat', '0313_003_006_EEG.hea', '0313.txt']\n",
-      "1/1 [==============================] - 0s 78ms/step\n"
+      "WARNING:tensorflow:5 out of the last 5 calls to <function Model.make_predict_function.<locals>.predict_function at 0x0000024801344FE0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "1/1 [==============================] - 0s 79ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "192.168.1.26 - - [29/Oct/2023 09:28:16] \"POST /upload HTTP/1.1\" 200 -\n"
+      "192.168.1.26 - - [29/Oct/2023 15:57:56] \"POST /upload HTTP/1.1\" 200 -\n"
      ]
     },
     {
