--- a/NeuroHero/predict_outcome.ipynb
+++ b/NeuroHero/predict_outcome.ipynb
@@ -498,6 +498,29 @@
       " * Running on http://192.168.1.24:5000\n",
       "Press CTRL+C to quit\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Received file names: ['0313_001_004_EEG.mat', '0313_001_004_EEG.hea', '0313.txt']\n",
+      "1/1 [==============================] - 0s 153ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "192.168.1.24 - - [01/Apr/2024 06:06:09] \"POST /upload HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's likely that the patient will have a good neurological outcome\n",
+      "Probability of Poor Outcome: 66.34605526924133%\n"
+     ]
     }
    ],
    "source": [
